crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_sqlite_file_tpch_simple_q4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q4"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |   Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |   Sort: lineitem.l_quantity DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |     Projection: avg(lineitem.l_tax), lineitem.l_linenumber, lineitem.l_quantity                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |       Aggregate: groupBy=[[lineitem.l_linenumber, lineitem.l_quantity]], aggr=[[avg(lineitem.l_tax)]]                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |         TableScan: lineitem projection=[l_linenumber, l_quantity, l_tax]                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |   SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |     VirtualExecutionPlan name=sqlite compute_context=//data/accelerated_sqlite.db sql=SELECT avg(lineitem.l_tax), lineitem.l_linenumber, lineitem.l_quantity FROM lineitem GROUP BY lineitem.l_linenumber, lineitem.l_quantity ORDER BY lineitem.l_quantity DESC NULLS FIRST LIMIT 10 rewritten_sql=SELECT avg(`lineitem`.`l_tax`), `lineitem`.`l_linenumber`, `lineitem`.`l_quantity` FROM `lineitem` GROUP BY `lineitem`.`l_linenumber`, `lineitem`.`l_quantity` ORDER BY `lineitem`.`l_quantity` DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
